<resources>
    <string name="app_name">Store Egypt</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="what_are_you_looking_for">what are you looking for?</string>
    <string name="collections">Collections</string>
    <string name="show_more">show more</string>
    <string name="home">Home</string>
    <string name="favorite">favorite</string>
    <string name="coupons">Coupons</string>
    <string name="more">More</string>
    <string name="deals">Deals</string>
    <string name="logout">Logout</string>
</resources>