<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/main_nav_container"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/main_coordinator">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/main_nav_host"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:name="androidx.navigation.fragment.NavHostFragment"
            app:navGraph="@navigation/main_nav"
            app:defaultNavHost="true" />

    </FrameLayout>



    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/main_coordinator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_nav_container">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/main_bottom_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:fabCradleRoundedCornerRadius="@dimen/_40sdp"
            app:fabAnimationMode="scale"
            app:fabCradleMargin="@dimen/_8sdp"
            app:fabAnchorMode="cradle"
            app:fabCradleVerticalOffset="@dimen/_4sdp"
            app:fabAlignmentMode="center"
            app:contentInsetStart="0dp"
            app:contentInsetEnd="0dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/main_nav_home"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:focusable="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:src="@drawable/ic_home" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/home"
                        android:textSize="@dimen/_12ssp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="@color/mixed_red"/>

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/main_nav_deals"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:src="@drawable/ic_coupon"
                        app:tint="@color/black"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/deals"
                        android:textSize="@dimen/_12ssp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="@color/mixed_red"/>

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/main_nav_favourite"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:src="@drawable/ic_favorite" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/favorite"
                        android:textSize="@dimen/_12ssp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="@color/mixed_red"/>

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/main_nav_more"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:src="@drawable/ic_more" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/more"
                        android:textSize="@dimen/_12ssp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="@color/mixed_red"/>

                </LinearLayout>

            </LinearLayout>


        </com.google.android.material.bottomappbar.BottomAppBar>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</androidx.constraintlayout.widget.ConstraintLayout>