<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/home_search_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/home_img_logo"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:src="@drawable/store_egypt_logo"/>

            <EditText
                android:id="@+id/home_et_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/search_bg"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:drawableEnd="@drawable/ic_search"
                android:textColorHint="@color/mixed_red"
                android:textColor="@color/mixed_red"
                android:hint="@string/what_are_you_looking_for"/>


        </LinearLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/home_slider_top_banner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginHorizontal="@dimen/_16sdp"
            app:layout_constraintTop_toBottomOf="@id/home_search_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/home_ln_collections"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            app:layout_constraintTop_toBottomOf="@id/home_slider_top_banner">

            <TextView
                android:id="@+id/home_ln_collections_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/collections"
                android:textColor="@color/mixed_red"
                android:textSize="@dimen/_13ssp"
                android:padding="@dimen/_4sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <LinearLayout
                android:id="@+id/home_collections_show_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_more"
                    android:textColor="@color/mixed_red"
                    android:textSize="@dimen/_13ssp"
                    android:padding="@dimen/_4sdp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_more"
                    android:layout_marginTop="@dimen/_4sdp"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/home_collections_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/home_ln_collections" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/home_ln_best_seller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            app:layout_constraintTop_toBottomOf="@id/home_collections_rv">

            <TextView
                android:id="@+id/home_ln_best_seller_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Best Seller"
                android:textColor="@color/mixed_red"
                android:textSize="@dimen/_13ssp"
                android:padding="@dimen/_4sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <LinearLayout
                android:id="@+id/home_best_seller_show_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_more"
                    android:textColor="@color/mixed_red"
                    android:textSize="@dimen/_13ssp"
                    android:padding="@dimen/_4sdp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_more"
                    android:layout_marginTop="@dimen/_4sdp"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/home_best_seller_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/home_ln_best_seller" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/home_banner_admob"
            android:layout_marginTop="@dimen/_8sdp"
            app:layout_constraintTop_toBottomOf="@id/home_best_seller_rv"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/home_ln_best_coupons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            app:layout_constraintTop_toBottomOf="@id/home_banner_admob">

            <TextView
                android:id="@+id/home_ln_best_coupons_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Coupons For You"
                android:textColor="@color/mixed_red"
                android:textSize="@dimen/_13ssp"
                android:padding="@dimen/_4sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <LinearLayout
                android:id="@+id/home_best_coupons_show_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_more"
                    android:textColor="@color/mixed_red"
                    android:textSize="@dimen/_13ssp"
                    android:padding="@dimen/_4sdp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_more"
                    android:layout_marginTop="@dimen/_4sdp"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/home_best_coupons_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/home_ln_best_coupons" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>